# cmd/server/main.go
@@ -10,6 +10,11 @@
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host localhost
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 package main
 
 import (
